--- a/assets/theme.css
+++ b/assets/theme.css
@@ -155,9 +155,9 @@
 }
 
 @font-face {
-  font-family: 'karinlight';
-  src: url('./karinlight-webfont.woff2') format('woff2'),
-       url('./karinlight-webfont.woff') format('woff');
+  font-family: 'karin';
+  src: url('./karinregular-webfont.woff2') format('woff2'),
+       url('./karinregular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -675,19 +675,33 @@ img[data-rimg=lazy], img[data-rimg=loading] {
 }
 
 .btn-solid{
-  min-width: 130px
+  min-width: 130px;
+  font-family: "qualy" !important;
+  font-style: normal;
+font-weight: 400;
+line-height: normal;
 
 }
 .btn-solid--secondary {
   background-color: #fff;
   border-color: #b7a490;
   color: #b7a490;
+  font-family: "qualy" !important;
+  font-style: normal;
+font-weight: 400;
+line-height: normal;
+
 }
 
 .btn-solid--tertiary {
   background-color: #43403B;
   border: none;
   color: #fff;
+  font-family: "qualy";
+  font-style: normal;
+font-weight: 400;
+line-height: normal;
+font-size: 18px;
 }
 
 
@@ -696,7 +710,7 @@ img[data-rimg=lazy], img[data-rimg=loading] {
 }
 
 .promo-block--button, .promo-block--secondary .promo-block--button, .product-card-interaction, .disclosure__submit, .cart-mini-actions .action-button {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .product-card-interaction-quickshop, .complementary-products .flickity-prev-next-button, .collections .collection .browse, .featured-collections .collection .browse, .product-form-has-spb .submit, .predictive-search__footer-button, .action-button.desaturated, .promo-block--secondary .promo-block--button, .cart-mini__continue-shopping, .countdown-timer__caption-button.countdown-timer__caption-button--secondary {
@@ -1942,7 +1956,7 @@ a.pswp__share--download:hover {
   padding: 45px 0 0;
   margin: 0 0 45px;
   font-size: 28px;
-  letter-spacing: 0.1em;
+  /* letter-spacing: 0.1em; */
   color: #B7A490;
   text-align: center;
   /* text-transform: uppercase; */
@@ -12872,7 +12886,7 @@ noscript .disclosure-list--visible {
     padding-top: 50px;
     padding-bottom: 0px;
     margin: 0 auto;
-    max-width: 90% !important;
+    max-width: 300px !important;
   }
   .picture-block-content .picture-block-body{
     display: none;
@@ -12882,12 +12896,12 @@ noscript .disclosure-list--visible {
   }
 }
 .picture-block-content {
-  max-width: 60%;
+  max-width: 55%;
   text-align: center;
 }
 
 .picture-block-heading {
-  font-family: "karinlight",sans-serif;
+  font-family: "karin",sans-serif;
   font-style: normal;
   font-weight: 400;
   margin: 50px 0 30px;
@@ -15981,3 +15995,77 @@ color: #F5F5F5;
 
 }
 
+.collectionSlider__slider  .product{
+  width: max-content;
+}
+
+.collectionSlider__text{
+  display: none;
+}
+
+@media screen and (max-width: 900px) {
+  .collectionSlider{
+    padding-top: 0;
+    background-color: transparent;
+  }
+  .collectionSlider::after{
+    content: none;
+  }
+
+  .collectionSlider__container{
+    width: 100%;
+    display: block;
+
+  }
+  .collectionSlider__image{
+    display: block;
+  }
+  .collectionSlider__image img, .collectionSlider__image svg{
+    position: relative;
+  }
+
+  .collectionSlider__image .section-title{
+    padding: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 38px;
+
+  }
+  .collectionSlider__image .section-title:nth-child(2){
+    top: 65px;
+  }
+  .collectionSlider__slider{
+    height: auto;
+    width: 90%;
+    margin: auto;
+    padding: 4rem 0;
+  }
+  .collectionSlider__slider .product-card-figure{
+    width: 202px;
+    height: 303px;
+  }
+  .collectionSlider__slider .product-list .product{
+    width: 100%;
+  }
+  .collectionSlider__slider .product-inner{
+    margin: auto;
+  }
+  .collectionSlider__slider .product-card-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.collectionSlider__text{
+  display: block;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  max-width: 330px;
+  margin: 36px auto 55px;
+}
+
+}
