--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1346,6 +1346,14 @@ html .shopify-payment-button .shopify-payment-button__button,
   text-transform: uppercase;
 }
 
+.main-header nav.full .nav-item > .label {
+  font-family: "qualy";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .main-header nav.full .nav-item > .label,
 .main-header nav.full .nav-item > details .label,
 .main-header .social-links {
