--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js no-touch" lang="{{ request.locale.iso_code }}">
+
 <head>
   <script>
     window.Store = window.Store || {};
@@ -9,6 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <!-- Preconnect Domains -->
   <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
   <link rel="preconnect" href="https://fonts.shopify.com" crossorigin>
@@ -22,57 +24,58 @@
   <link rel="preload" href="{{ 'atlantic-icons.woff' | asset_url }}" as="font" type="font/woff" crossorigin>
 
   {% if template contains 'cart' %}
-    <link rel="preload" href="{{ '/services/javascripts/countries.js' }}" as="script">
-    <link rel="preload" href="{{ 'shopify_common.js' | shopify_asset_url }}" as="script">
-    <link rel="preload" href="{{ 'jquery.cart.min.js' | asset_url }}" as="script">
+  <link rel="preload" href="{{ '/services/javascripts/countries.js' }}" as="script">
+  <link rel="preload" href="{{ 'shopify_common.js' | shopify_asset_url }}" as="script">
+  <link rel="preload" href="{{ 'jquery.cart.min.js' | asset_url }}" as="script">
   {% endif %}
 
   {% if template contains 'customers' %}
-    <link rel="preload" href="{{ 'shopify_common.js' | shopify_asset_url }}" as="script">
-    <link rel="preload" href="{{ 'customer_area.js' | shopify_asset_url }}" as="script">
+  <link rel="preload" href="{{ 'shopify_common.js' | shopify_asset_url }}" as="script">
+  <link rel="preload" href="{{ 'customer_area.js' | shopify_asset_url }}" as="script">
   {% endif %}
 
   <title>
     {{- page_title -}}
 
     {%- if current_tags -%}
-      &ndash; "{{ current_tags | join: ', ' }}"
+    &ndash; "{{ current_tags | join: ', ' }}"
     {%- endif -%}
 
     {%- if current_page != 1 -%}
-      &ndash; {{ 'general.pagination.seo_title' | t }} {{ current_page }}
+    &ndash; {{ 'general.pagination.seo_title' | t }} {{ current_page }}
     {%- endif -%}
 
     {%- unless page_title contains shop.name -%}
-      &ndash; {{ shop.name }}
+    &ndash; {{ shop.name }}
     {%- endunless -%}
   </title>
 
   {% if page_description or shop.description != blank %}
-    <meta name="description" content="{% if page_description %}{{ page_description }}{% else %}{{ shop.description }}{% endif %}">
+  <meta name="description"
+    content="{% if page_description %}{{ page_description }}{% else %}{{ shop.description }}{% endif %}">
   {% endif %}
 
   {% render 'favicon' %}
 
   {% if template contains 'collection' and current_tags %}
-    <meta name="robots" content="noindex" />
-    <link rel="canonical" href="{{ shop.url }}{{ collection.url }}" />
+  <meta name="robots" content="noindex" />
+  <link rel="canonical" href="{{ shop.url }}{{ collection.url }}" />
   {% else %}
-    <link rel="canonical" href="{{ canonical_url }}" />
+  <link rel="canonical" href="{{ canonical_url }}" />
   {% endif %}
 
   {{ content_for_header }}
 
   {% assign twitter_handle = settings.social_twitter_url | split: 'twitter.com/' | last %}
   {%
-    render 'social-meta-tags',
-    twitter_handle: twitter_handle
+  render 'social-meta-tags',
+  twitter_handle: twitter_handle
   %}
 
   <script>
-    document.documentElement.className=document.documentElement.className.replace(/\bno-js\b/,'js');
-    if(window.Shopify&&window.Shopify.designMode)document.documentElement.className+=' in-theme-editor';
-    if(('ontouchstart' in window)||window.DocumentTouch&&document instanceof DocumentTouch)document.documentElement.className=document.documentElement.className.replace(/\bno-touch\b/,'has-touch');
+    document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/, 'js');
+    if (window.Shopify && window.Shopify.designMode) document.documentElement.className += ' in-theme-editor';
+    if (('ontouchstart' in window) || window.DocumentTouch && document instanceof DocumentTouch) document.documentElement.className = document.documentElement.className.replace(/\bno-touch\b/, 'has-touch');
   </script>
 
   <!-- Theme CSS -->
@@ -90,13 +93,13 @@
     Theme.shippingCalcOneRate = "{{ 'cart.shipping_calculator.rate' | t | strip_newlines | replace: '"','\\"' }}";
     Theme.shippingCalcNoRates = "{{ 'cart.shipping_calculator.no_rates' | t | strip_newlines | replace: '"','\\"' }}";
     Theme.shippingCalcRateValues = "{{ 'cart.shipping_calculator.rate_values_html' | t | strip_newlines | replace: '"','\\"' }}";
-    Theme.userLoggedIn = {% if shop.customer_accounts_enabled and customer %}true{% else %}false{% endif %};
+    Theme.userLoggedIn = {% if shop.customer_accounts_enabled and customer %}true{% else %} false{% endif %};
     Theme.userAddress = '{% if shop.customer_accounts_enabled and customer %}{{ customer.default_address }}{% endif %}';
-    Theme.centerHeader = {% if settings.center-header %}true{% else %}false{% endif %};
-  
+    Theme.centerHeader = {% if settings.center - header %}true{% else %} false{% endif %};
+
     Theme.cartItemsOne = "{{ 'layout.header.item_count.one' | t | strip_newlines | escape }}";
     Theme.cartItemsOther = "{{ 'layout.header.item_count.other' | t | strip_newlines | escape }}";
-  
+
     Theme.addToCart = "{{ 'products.product.add_to_cart' | t | strip_newlines | escape }}";
     Theme.soldOut = "{{ 'products.product.sold_out' | t | strip_newlines | escape }}";
     Theme.unavailable = "{{ 'products.product.unavailable' | t | strip_newlines | escape }}";
@@ -122,45 +125,38 @@
 
 </head>
 
-<body
-  class="
+<body class="
     {% if template contains 'contact' %}
       template-contact
     {% else %}
       template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}
     {% endif %}
-    {% if settings.meta-font == "'Open Sans' sans-serif" %}
-      font-open-sans
-    {% endif %}
-    {% if settings.main-title-uppercase %}
-      uppercase
-    {% endif %}
-    product-grid-{{ settings.product_grid_aspect_ratio }}
-  "
+    {% if settings.meta-font == "'Open Sans' sans-serif" %} font-open-sans {% endif %} {% if
+  settings.main-title-uppercase %} uppercase {% endif %} product-grid-{{ settings.product_grid_aspect_ratio }} "
 >
-  <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=187795038002910";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+  <div id=" fb-root">
+  </div>
+  <script>(function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=187795038002910";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
   {% comment %}Inject icon-star-symbol begin{% endcomment %}
-  <svg
-    class="icon-star-reference"
-    aria-hidden="true"
-    focusable="false"
-    role="presentation"
-    xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="3 3 17 17" fill="none"
-  >
+  <svg class="icon-star-reference" aria-hidden="true" focusable="false" role="presentation"
+    xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="3 3 17 17" fill="none">
     <symbol id="icon-star">
-      <rect class="icon-star-background" width="20" height="20" fill="currentColor"/>
-      <path d="M10 3L12.163 7.60778L17 8.35121L13.5 11.9359L14.326 17L10 14.6078L5.674 17L6.5 11.9359L3 8.35121L7.837 7.60778L10 3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+      <rect class="icon-star-background" width="20" height="20" fill="currentColor" />
+      <path
+        d="M10 3L12.163 7.60778L17 8.35121L13.5 11.9359L14.326 17L10 14.6078L5.674 17L6.5 11.9359L3 8.35121L7.837 7.60778L10 3Z"
+        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none" />
     </symbol>
     <clipPath id="icon-star-clip">
-      <path d="M10 3L12.163 7.60778L17 8.35121L13.5 11.9359L14.326 17L10 14.6078L5.674 17L6.5 11.9359L3 8.35121L7.837 7.60778L10 3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      <path
+        d="M10 3L12.163 7.60778L17 8.35121L13.5 11.9359L14.326 17L10 14.6078L5.674 17L6.5 11.9359L3 8.35121L7.837 7.60778L10 3Z"
+        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
     </clipPath>
   </svg>
   {% comment %}Inject icon-star-symbol end{% endcomment %}
@@ -175,16 +171,12 @@
     <div class="sidebar-drawer" data-sidebar-drawer tab-index="-1">
       <div class="sidebar-drawer__header-container">
         <div class="sidebar-drawer__header" data-sidebar-drawer-header></div>
-  
-        <button
-          class="sidebar-drawer__header-close"
-          aria-label="close"
-          data-sidebar-drawer-close
-        >
+
+        <button class="sidebar-drawer__header-close" aria-label="close" data-sidebar-drawer-close>
           {% render 'icon' with 'close-alt' %}
         </button>
       </div>
-  
+
       <div class="sidebar-drawer__content" data-sidebar-drawer-content></div>
     </div>
   </div>
@@ -195,9 +187,9 @@
 
   <div style="--background-color: {{ settings.background-colour }}">
     {%
-      render 'age-gate',
-      id: 'page',
-      sections: content_for_layout,
+    render 'age-gate',
+    id: 'page',
+    sections: content_for_layout,
     %}
   </div>
 
@@ -208,29 +200,26 @@
   {% sections 'footer-group' %}
 
   <!-- Scripts -->
-  <script
-    src="{{ 'atlantic.js' | asset_url }}"
-    data-scripts
+  <script src="{{ 'atlantic.js' | asset_url }}" data-scripts
     data-shopify-api-url="{{ 'api.jquery.js' | shopify_asset_url }}"
     data-shopify-countries="/services/javascripts/countries.js"
     data-shopify-common="{{ 'shopify_common.js' | shopify_asset_url }}"
     data-shopify-cart="{{ 'jquery.cart.min.js' | asset_url }}"
-    data-customer-area="{{ 'customer_area.js'  | shopify_asset_url }}"
-    defer>
-  </script>
+    data-customer-area="{{ 'customer_area.js'  | shopify_asset_url }}" defer>
+    </script>
 
   <script src="{{ 'api.jquery.js' | shopify_asset_url }}" defer></script>
   <script src="{{ 'plugins.js' | asset_url }}" defer></script>
 
   {% if template contains 'cart' %}
-    <script src="{{ '/services/javascripts/countries.js' }}" defer></script>
-    <script src="{{ "shopify_common.js" | shopify_asset_url }}" defer></script>
-    <script src="{{ 'jquery.cart.min.js' | asset_url }}" defer></script>
+  <script src="{{ '/services/javascripts/countries.js' }}" defer></script>
+  <script src="{{ " shopify_common.js" | shopify_asset_url }}" defer></script>
+  <script src="{{ 'jquery.cart.min.js' | asset_url }}" defer></script>
   {% endif %}
 
   {% if template contains 'customers' %}
-    <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
-    <script src="{{ 'customer_area.js'  | shopify_asset_url }}" defer></script>
+  <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
+  <script src="{{ 'customer_area.js'  | shopify_asset_url }}" defer></script>
   {% endif %}
 
   {% render 'structured-data' %}
@@ -247,4 +236,5 @@
     })();
   </script>
 </body>
+
 </html>
