--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -1,48 +1,88 @@
 <script type="module">
     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs'
-
     const swiper = new Swiper('.swiper', {
-        // Optional parameters
-        direction: 'vertical',
-        loop: true,
 
-        // If we need pagination
-        pagination: {
-            el: '.swiper-pagination',
-        },
-
+        slidesPerView: 1.5,
+        spaceBetween: 10,
+        centeredSlides: true,
+        createElement: true,
         // Navigation arrows
         navigation: {
             nextEl: '.swiper-button-next',
             prevEl: '.swiper-button-prev',
         },
+        breakpoints: {
+            990: {
+                spaceBetween: 30,
+                slidesPerView: 2.5,
+            },
+        }
 
-        // And if we need scrollbar
-        scrollbar: {
-            el: '.swiper-scrollbar',
-        },
+
     })
+    swiper.slideTo(1, 0);
+
 </script>
 
-<section class="slider">
+<section class="sliderBlock">
     <div class="swiper">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
-        </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
 
+            {% if section.blocks.size > 0 %}
+            {% for block in section.blocks %}
+            {%- assign link = block.settings.link -%}
+            {%- assign label = block.settings.link_label -%}
+            {%- assign image = block.settings.image -%}
+
+            {% if image %}
+            <div class="swiper-slide">
+                <div class="swiper-slide-item">
+                    {% if label != blank %}
+                    <a href="{{ link | escape }}" target="_blank">
+                        {%
+                        render 'rimg'
+                        img: image,
+                        alt: label,
+                        size: '540x640',
+                        lazy: true,
+                        focal_point: image.presentation.focal_point, %}
+                        {{label | escape}}
+                    </a>
+                    {% else %}
+                    {%
+                    render 'rimg'
+                    img: image,
+                    alt: label,
+                    size: '540x640',
+                    lazy: true,
+                    focal_point: image.presentation.focal_point, %}
+                    {% endif %}
+                </div>
+            </div>
+            {% else %}
+            {% render 'logo-list-onboarding' %}
+            {% endif %}
+            {% endfor %}
+            {% else %}
+            {% for i in (1..4) %}
+            <div class="swiper-slide">
+                <div class="swiper-slide-item">
+                    <a>
+
+                        {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
+                        <span>{{label | escape}} holi</span>
+                    </a>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
+        </div>
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
 
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
     </div>
 </section>
 
@@ -56,10 +96,46 @@
 "content": "Image"
 }
 ],
+"blocks": [
+{
+"type": "feature",
+"name": "Slider",
+"settings": [
+{
+"type": "image_picker",
+"id": "image",
+"label": "Image",
+"info": "540px x 640px .jpg recommended"
+},
+{
+"type": "url",
+"id": "link",
+"label": "Link"
+},
+{
+"type": "text",
+"id": "link_label",
+"label": "Label",
+"default": "Button"
+}
+]
+}
+],
 "presets": [
 {
 "category": "Image",
-"name": "Featured slider"
+"name": "Slider list",
+"blocks": [
+{
+"type": "feature"
+},
+{
+"type": "feature"
+},
+{
+"type": "feature"
+}
+]
 }
 ]
 }
