--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -72,7 +72,7 @@
                     <a>
 
                         {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
-                        <span>{{label | escape}} holi</span>
+                        <span>{{label | escape}}</span>
                     </a>
                 </div>
             </div>
@@ -137,6 +137,10 @@
 }
 ]
 }
+],"disabled_on": {
+"groups": [
+"*"
 ]
+}
 }
 {% endschema %}
