--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17553,7 +17553,7 @@ img[data-rimg=loaded] {
   width: max-content;
   height: max-content;
   font-family: "qualy";
-  font-size: clamp(32px, 5vw, 56px);
+  font-size: clamp(32px, 4vw, 56px);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -17572,5 +17572,11 @@ img[data-rimg=loaded] {
   }
   .sliderBlock .swiper-slide-item {
     height: 400px
+  }
+}
+
+@media screen and (min-width: 1400px) and(min-height: 930px) {
+  .sliderBlock .swiper-slide-item {
+    height: 745px
   }
 }
