--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -50,7 +50,7 @@
                             size: '540x640',
                             lazy: true,
                             focal_point: image.presentation.focal_point, %}
-                            {{label | escape}}
+                            <span>{{label | escape}}</span>
                         </a>
                         {% else %}
                         {%
@@ -74,7 +74,7 @@
                         <a>
 
                             {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
-                            <span>{{label | escape}}</span>
+                            <span>Button label</span>
                         </a>
                     </div>
                 </div>
