fix(slider-collection)

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -5570,6 +5570,9 @@ table.mobile-layout tr:nth-child(even) td {
   width: 100%;
   margin-left: 0;
 }
+.featured-collection .product-card-interaction {
+  text-transform: uppercase;
+}
 .featured-collection .product-list.row-of-2 .product {
   width: calc(50% - 12px);
 }
@@ -17370,6 +17373,17 @@ img[data-rimg=loaded] {
   bottom: 0;
   margin: auto;
   transform: none !important;
+}
+
+.collectionSlider__slider .prev svg,
+.collectionSlider__slider .next svg {
+  width: 38px;
+}
+.collectionSlider__slider .prev {
+  left: 10%;
+}
+.collectionSlider__slider .next {
+  right: 10%;
 }
 
 .collectionSlider__slider .product-list .product {
