--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17611,3 +17611,47 @@ img[data-rimg=loaded] {
     height: 745px
   }
 }
+
+
+.main-footer .sup-footer {
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  align-items: center;
+}
+
+.main-footer .footer-logo img,
+.main-footer .footer-logo svg {
+  width: 158px;
+  height: 166px;
+}
+.main-footer .footer-principal {
+  display: flex;
+
+}
+.main-footer .footer-principal div {
+  width: 236px;
+  text-align: center
+}
+
+.main-footer .footer-principal .footer-menu {
+  padding: 0 !important;
+}
+
+.main-footer .footer-principal .section-title {
+  margin-bottom: 20px;
+}
+
+.main-footer .footer-principal a {
+  color: #B7A490 !important;
+  text-align: center;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 20px;
+}
+
+.main-footer .sub-footer {
+  background: #43403B;
+  margin: 40px 0 60px;
+}
