--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17648,12 +17648,16 @@ img[data-rimg=loaded] {
   }
 }
 
-@media screen and (min-width: 1400px) and(min-height: 930px) {
+@media screen and (min-width: 1400px) {
   .sliderBlock .swiper-slide-item {
     height: 745px
   }
 }
-
+@media screen and (min-height: 930px) {
+  .sliderBlock .swiper-slide-item {
+    height: 745px
+  }
+}
 
 .main-footer .sup-footer {
   display: grid;
