--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16321,3 +16321,14 @@ color: #F5F5F5;
     margin-top: 25px;
   }
 }
+
+.marquee{
+  background-color: #43403B;
+}
+.marquee.body--large *{
+  font-size: 72px;
+  
+}
+.color-accent-1 *{
+  color: #B7A490;
+}
