--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17724,3 +17724,14 @@ img[data-rimg=loaded] {
     margin-top: 25px;
   }
 }
+
+.marquee {
+  background-color: #43403B;
+}
+.marquee.body--large * {
+  font-size: 72px;
+
+}
+.color-accent-1 * {
+  color: #B7A490;
+}
