--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17729,6 +17729,13 @@ img[data-rimg=loaded] {
   color: {{ settings.accent-colour }}
 }
 
+.marquee {
+  background-color: #43403B;
+}
+.marquee.body--large * {
+  font-size: 72px;
+
+}
 .marquee-inner div div {
   position: relative;
 }
