--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16197,6 +16197,13 @@ color: #F5F5F5;
   height: 100%;
 }
 
+.sliderBlock .swiper-slide-item img,
+  .sliderBlock .swiper-slide-item svg {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 .sliderBlock .swiper-slide-item a img,
   .sliderBlock .swiper-slide-item a svg {
     height: 100%;
